--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,6 +9,7 @@ title: 11ty Boilerplate
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/screen.css">
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.4.0/dist/alpine.min.js" defer></script>
 </head>
 <body>
   <nav>
