included js file

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -10,6 +10,7 @@ title: 11ty Boilerplate
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/screen.css">
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.4.0/dist/alpine.min.js" defer></script>
+  
 </head>
 <body>
   <nav>
@@ -19,5 +20,6 @@ title: 11ty Boilerplate
     </ul>
   </nav>
     {{ content }}
+  <script src="utilities.js"></script>
 </body>
 </html>
