ok this should work now

--- a/index.liquid
+++ b/index.liquid
@@ -4,4 +4,6 @@ title: 11ty Boilerplate
 ---
 
 <h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+
+<button id="randomNameBtn">Generate Random Name</button>
+<h1 id="randomName"></h1>
